2006-02-14 Tim
 PATCH: [ 1431053 ] Manual: Remove echo off/on from configuration.bat (XSL)
  Manual/build: configuration.bat

2006-02-12 Kimmo
 BUG: [ 1412404 ] Manual example looks wrong
  Manual: Quick_start.xml

2006-02-12 Tim
 BUG: [ 1428754 ] HTML Help build broken?
  Manual/build: build_htmlhelp.bat

2006-01-27 Tim
 TODO: [ 1413926 ] Build manual file(s) to /Build
  Manual/build: configuration.bat

2006-01-26 Tim
 PATCH: [ 1414983 ] Manual: Make build path configurable (XSL)
  Manual/build: build_html.bat build_htmlhelp.bat configuration.bat

2006-01-24 Kimmo
 Bump revision number to 1.2.1
  Manual: WinMerge_help.xml

2006-01-23 Kimmo
 PATCH: [ 1412405 ] Some edits to About & QuickStart pages of manual
  Submitted by Perry
  Manual: About_Doc.xml Quick_start.xml

2006-01-17 Kimmo
 PATCH: [ 1407555 ] Manual: add new shortcuts for find
  Manual: Shortcut_keys.xml

2006-01-17 Tim
 PATCH: [ 1405344 ] Manual: New icons
  Manual/screenshots: binarydiff.gif equal.gif error.gif fileskip.gif
    folderskip.gif lfile.gif lfolder.gif notequal.gif rfile.gif rfolder.gif
 PATCH: [ 1405261 ] Manual: Background colors for Notes and Co. (XSL)
  Manual/build: build_html.bat build_html.xsl build_htmlhelp.bat build_htmlhelp.xsl
  Manual/css: all.css help.css print.css

2006-01-14 Perry
 PATCH: [ 1403457 ] Support Unicode file filter files
  Remove limitation (file filters now handle unicode files)
  (reverses my PATCH: [ 1401001 ])
  Manual: Filters.xml

2006-01-11 Kimmo
 Update copyright year, WinMerge version to 2.5 and revision
  Manual: WinMerge_help.xml
 PATCH: [ 1382020 ] New FAQ entry for large file Quick Compare
  Submitted by Perry
  Manual: Faq.xml
 PATCH: [ 1401001 ] Add note to filters manual that Unicode is not supported
  Submitted by Perry
  Manual: Filters.xml

2006-01-08 Perry
 BUG: [ 1396950 ] Manual installation doesn't specify admin access
  Manual: Install.xml

2005-12-21 Kimmo
 BUG: [ 1384832 ] ulink has ??? in FAQ
  Manual: Faq.xml

2005-12-20 Perry