@@ -102,6 +102,16 @@
           <guimenuitem>About WinMerge</guimenuitem>
         </menuchoice> dialog.</para>
     </important>
+
+    <para>We prefer that you <ulink
+    url="https://sourceforge.net/account/newuser_emailverify.php">register</ulink>
+    with <ulink url="http://sourceforge.net/">Sourceforge.Net</ulink> before
+    posting a bug report (registration is public and free), so that you may
+    get email notifications if we post follow-up questions to your bug. It is
+    not at this time required that you register to post a bug report
+    (although, we do generally give less priority to unregistered bug reports,
+    because it has been our experience that unregistered posters often do not
+    remember to return and check to answer follow-on questions).</para>
   </sect2>
 
   <sect2>
