@@ -1,3 +1,8 @@
+2006-02-28 Kimmo
+ PATCH: [ 1440383 ] Suggested addition to manual about bug reports
+  Submitted by Perry
+  Manual: Introduction.xml
+
 2006-02-14 Tim
  PATCH: [ 1431053 ] Manual: Remove echo off/on from configuration.bat (XSL)
   Manual/build: configuration.bat
